bindings/idris2/src/Proven/FFI.idr


||| Sanitise a filename by removing dangerous characters.
||| Returns (status, result_ptr, result_len). Caller must free result_ptr.
%foreign "C:proven_path_sanitize_filename,libproven"
export
prim__proven_path_sanitize_filename : String -> Int -> PrimIO (Int, AnyPtr, Int)

-- ============================================================================
-- SafeEmail (1 function)
-- ============================================================================

||| Validate email address (RFC 5321 simplified).
||| Returns (status, bool_value) where bool_value is non-zero if valid.
%foreign "C:proven_email_is_valid,libproven"
export
prim__proven_email_is_valid : String -> Int -> PrimIO (Int, Int)

-- ============================================================================
-- SafeNetwork (3 functions)
-- ============================================================================

||| Parse IPv4 address string.
||| Returns an opaque struct pointer. Use the SafeNetwork wrapper to
||| extract octets and status.
%foreign "C:proven_network_parse_ipv4,libproven"
export
prim__proven_network_parse_ipv4 : String -> Int -> PrimIO AnyPtr

||| Check if IPv4 address is private (RFC 1918).
||| Takes the four octets packed as a struct (passed via AnyPtr).
%foreign "C:proven_network_ipv4_is_private,libproven"
export
prim__proven_network_ipv4_is_private : AnyPtr -> PrimIO Int

||| Check if IPv4 address is loopback (127.0.0.0/8).
%foreign "C:proven_network_ipv4_is_loopback,libproven"
export
prim__proven_network_ipv4_is_loopback : AnyPtr -> PrimIO Int

-- ============================================================================
-- SafeCrypto (2 functions)
-- ============================================================================

||| Constant-time byte comparison (timing-attack safe).
||| Returns (status, bool_value).
%foreign "C:proven_crypto_constant_time_eq,libproven"
export
prim__proven_crypto_constant_time_eq : String -> Int -> String -> Int -> PrimIO (Int, Int)

||| Fill buffer with cryptographically secure random bytes.
||| Returns a status code.
%foreign "C:proven_crypto_random_bytes,libproven"
export
prim__proven_crypto_random_bytes : AnyPtr -> Int -> PrimIO Int

-- ============================================================================
-- SafeUrl (2 functions)
-- ============================================================================

||| Parse a URL into components.
||| Returns an opaque pointer to a ProvenUrlResult struct.
||| Use the SafeUrl wrapper module to extract components.
||| Caller must free via prim__proven_url_free.
%foreign "C:proven_url_parse,libproven"
export
prim__proven_url_parse : String -> Int -> PrimIO AnyPtr

||| Free URL components allocated by proven_url_parse.
%foreign "C:proven_url_free,libproven"
export
prim__proven_url_free : AnyPtr -> PrimIO ()

-- ============================================================================
-- SafeJson (2 functions)
-- ============================================================================

||| Check if string is valid JSON.
||| Returns (status, bool_value) where bool_value is non-zero if valid.
%foreign "C:proven_json_is_valid,libproven"
export
prim__proven_json_is_valid : String -> Int -> PrimIO (Int, Int)

||| Get JSON value type at root level.
||| Returns: 0=null, 1=bool, 2=number, 3=string, 4=array, 5=object, -1=invalid.
%foreign "C:proven_json_get_type,libproven"
export
prim__proven_json_get_type : String -> Int -> PrimIO Int

-- ============================================================================
-- SafeDateTime (4 functions)
-- ============================================================================

||| Parse ISO 8601 date string.
||| Returns an opaque pointer to a ProvenDateTimeResult struct.
||| Use the SafeDateTime wrapper module to extract components.
%foreign "C:proven_datetime_parse,libproven"
export
prim__proven_datetime_parse : String -> Int -> PrimIO AnyPtr

||| Format DateTime as ISO 8601 string.
||| Takes a pointer to a ProvenDateTime struct.
||| Returns (status, result_ptr, result_len). Caller must free result_ptr.
%foreign "C:proven_datetime_format_iso8601,libproven"
export
prim__proven_datetime_format_iso8601 : AnyPtr -> PrimIO (Int, AnyPtr, Int)

||| Check if year is a leap year. Pure function.
%foreign "C:proven_datetime_is_leap_year,libproven"
export
prim__proven_datetime_is_leap_year : Int -> Int

||| Get number of days in a month. Returns 0 if invalid month. Pure function.
%foreign "C:proven_datetime_days_in_month,libproven"
export
prim__proven_datetime_days_in_month : Int -> Int -> Int

-- ============================================================================
-- SafeFloat (5 functions)
-- ============================================================================

||| Safe floating-point division.
||| Returns (status, value). PROVEN_ERR_DIVISION_BY_ZERO if b is 0.
%foreign "C:proven_float_div,libproven"
export
prim__proven_float_div : Double -> Double -> PrimIO (Int, Double)

||| Check if float is finite (not NaN or Inf). Pure function.
||| Returns non-zero if finite.
%foreign "C:proven_float_is_finite,libproven"
export
prim__proven_float_is_finite : Double -> Int

||| Check if float is NaN. Pure function.
||| Returns non-zero if NaN.
%foreign "C:proven_float_is_nan,libproven"
export
prim__proven_float_is_nan : Double -> Int

||| Safe square root.
||| Returns (status, value). PROVEN_ERR_INVALID_ARGUMENT if x < 0.
%foreign "C:proven_float_sqrt,libproven"
export
prim__proven_float_sqrt : Double -> PrimIO (Int, Double)

||| Safe natural logarithm.
||| Returns (status, value). PROVEN_ERR_INVALID_ARGUMENT if x <= 0.
%foreign "C:proven_float_ln,libproven"
export
prim__proven_float_ln : Double -> PrimIO (Int, Double)

-- ============================================================================
-- SafeHex (3 functions)
-- ============================================================================

||| Encode bytes to hex string.
||| Third parameter: non-zero for uppercase hex digits.
||| Returns (status, result_ptr, result_len). Caller must free result_ptr.
%foreign "C:proven_hex_encode,libproven"
export
prim__proven_hex_encode : String -> Int -> Int -> PrimIO (Int, AnyPtr, Int)

||| Decode hex string to bytes.
||| Returns an opaque pointer to a ProvenHexDecodeResult struct.
||| Caller must free via prim__proven_hex_free.
%foreign "C:proven_hex_decode,libproven"
export
prim__proven_hex_decode : String -> Int -> PrimIO AnyPtr

||| Free hex decode result.
%foreign "C:proven_hex_free,libproven"
export
prim__proven_hex_free : AnyPtr -> PrimIO ()

-- ============================================================================
-- SafeColor (3 functions)
-- ============================================================================

||| Parse hex color string (#RRGGBB or #RGB).
||| Returns an opaque pointer containing (status, r, g, b).
%foreign "C:proven_color_parse_hex,libproven"
export
prim__proven_color_parse_hex : String -> Int -> PrimIO AnyPtr

||| Format RGB as hex string ("#rrggbb", lowercase).
||| Returns (status, result_ptr, result_len). Caller must free result_ptr.
%foreign "C:proven_color_to_hex,libproven"
export
prim__proven_color_to_hex : Int -> Int -> Int -> PrimIO (Int, AnyPtr, Int)

||| Convert RGB to HSL. Returns an opaque pointer to ProvenHSLColor.
%foreign "C:proven_color_rgb_to_hsl,libproven"
export
prim__proven_color_rgb_to_hsl : Int -> Int -> Int -> PrimIO AnyPtr

-- ============================================================================
-- SafeChecksum (2 functions)
-- ============================================================================

||| Calculate CRC32 checksum.
||| Returns (status, crc32_value).
%foreign "C:proven_checksum_crc32,libproven"
export
prim__proven_checksum_crc32 : String -> Int -> PrimIO (Int, Int64)

||| Verify CRC32 matches expected value.
||| Returns (status, bool_value) where bool_value is non-zero if match.
%foreign "C:proven_checksum_verify_crc32,libproven"
export
prim__proven_checksum_verify_crc32 : String -> Int -> Int -> PrimIO (Int, Int)

-- ============================================================================
-- SafeVersion (3 functions)
-- ============================================================================

||| Parse semantic version string.
||| Returns an opaque pointer to a ProvenVersionResult struct.
||| Caller must free via prim__proven_version_free.
%foreign "C:proven_version_parse,libproven"
export
prim__proven_version_parse : String -> Int -> PrimIO AnyPtr

||| Compare two semantic versions.
||| Takes two opaque version struct pointers.
||| Returns negative if a < b, 0 if equal, positive if a > b.
%foreign "C:proven_version_compare,libproven"
export
prim__proven_version_compare : AnyPtr -> AnyPtr -> Int

||| Free version result resources (prerelease string).
%foreign "C:proven_version_free,libproven"
export
prim__proven_version_free : AnyPtr -> PrimIO ()

-- ============================================================================
-- SafeGeo (3 functions)
-- ============================================================================

||| Validate and normalise geographic coordinate.
||| Returns (status, lat, lon).
%foreign "C:proven_geo_validate,libproven"
export
prim__proven_geo_validate : Double -> Double -> PrimIO (Int, Double, Double)

||| Calculate distance between two points (Haversine formula).
||| Takes (lat1, lon1, lat2, lon2) flattened from the two coord structs.
||| Returns (status, distance_in_metres).
%foreign "C:proven_geo_distance,libproven"
export
prim__proven_geo_distance : Double -> Double -> Double -> Double -> PrimIO (Int, Double)

||| Check if coordinate is inside a bounding box.
||| Takes (coord_lat, coord_lon, min_lat, max_lat, min_lon, max_lon).
||| Returns non-zero if in bounds.
%foreign "C:proven_geo_in_bounds,libproven"
export
prim__proven_geo_in_bounds : Double -> Double -> Double -> Double -> Double -> Double -> Int

-- ============================================================================
-- SafeProbability (4 pure functions)
-- ============================================================================

||| Create probability value clamped to [0, 1]. Pure.
%foreign "C:proven_probability_create,libproven"
export
prim__proven_probability_create : Double -> Double

||| Multiply probabilities (independent events: P(A and B)). Pure.
%foreign "C:proven_probability_and,libproven"
export
prim__proven_probability_and : Double -> Double -> Double

||| Add probabilities (mutually exclusive events: P(A or B)). Pure.
%foreign "C:proven_probability_or_exclusive,libproven"
export
prim__proven_probability_or_exclusive : Double -> Double -> Double

||| Complement probability: P(not A) = 1 - P(A). Pure.
%foreign "C:proven_probability_not,libproven"
export
prim__proven_probability_not : Double -> Double

-- ============================================================================
-- SafeAngle (4 pure functions)
-- ============================================================================

||| Convert degrees to radians. Pure.
%foreign "C:proven_angle_deg_to_rad,libproven"
export
prim__proven_angle_deg_to_rad : Double -> Double

||| Convert radians to degrees. Pure.
%foreign "C:proven_angle_rad_to_deg,libproven"
export
prim__proven_angle_rad_to_deg : Double -> Double

||| Normalise angle to [0, 360) degrees. Pure.
%foreign "C:proven_angle_normalize_degrees,libproven"
export
prim__proven_angle_normalize_degrees : Double -> Double

||| Normalise angle to [0, 2*pi) radians. Pure.
%foreign "C:proven_angle_normalize_radians,libproven"
export
prim__proven_angle_normalize_radians : Double -> Double

-- ============================================================================
-- SafeCalculator (1 function)
-- ============================================================================
